add CRUD user & auth api
