# BACK-END/models/User.js
@@ -1,21 +1,21 @@
-const mongoose = require("mongoose");
+const mongoose = require('mongoose');
 const { Schema } = mongoose;
-const validator = require("validator");
-const bcrypt = require("bcryptjs");
+const validator = require('validator');
+const bcrypt = require('bcryptjs');
 
 const userSchema = new Schema(
   {
     username: {
       type: String,
-      required: [true, "username must be filled"],
-      minlength: [3, "username minimal 3 karakter"],
+      required: [true, 'username must be filled'],
+      minlength: [3, 'username minimal 3 karakter'],
     },
     email: {
       type: String,
-      required: [true, "email must be filled"],
+      required: [true, 'email must be filled'],
       validate: {
         validator: validator.isEmail,
-        message: "input must be valid format email",
+        message: 'input must be valid format email',
       },
       unique: true,
     },
@@ -25,23 +25,25 @@ const userSchema = new Schema(
         function () {
           return !this.is_oauth;
         },
-        "password must be filled",
+        'password must be filled',
       ],
-      minlength: [6, "password minimal 6 karakter"],
+      minlength: [6, 'password minimal 6 karakter'],
     },
     role: {
       type: String,
-      enum: ["user", "admin"],
-      default: "user",
+      enum: ['user', 'admin'],
+      default: 'user',
     },
     is_verified: { type: Boolean, default: false },
     is_oauth: { type: Boolean, default: false },
-    picture: { type: String, default: "" },
+    picture: { type: String, default: '' },
+    bio: { type: String, maxlength: 300 },
+    last_login: { type: Date },
     token_verify: { type: String },
     token_expires: { type: Date },
     starred_product: {
       type: [mongoose.Schema.Types.ObjectId],
-      ref: "Product",
+      ref: 'Product',
       default: [],
     },
   },
@@ -53,12 +55,12 @@ userSchema.methods.comparePassword = async function (reqBody) {
   return await bcrypt.compare(reqBody, this.password);
 };
 
-userSchema.pre("save", async function (next) {
-  if (!this.isModified("password")) return next();
+userSchema.pre('save', async function (next) {
+  if (!this.isModified('password')) return next();
   this.password = await bcrypt.hash(this.password, 10);
   next();
 });
 
-const User = mongoose.model("User", userSchema);
+const User = mongoose.model('User', userSchema);
 
 module.exports = User;
