# BACK-END/routes/auth.routes.js
@@ -1,14 +1,19 @@
-const express = require("express");
+const express = require('express');
 const {
   verifyEmailRegist,
   createSession,
-} = require("../controllers/authController");
+  deleteSession,
+} = require('../controllers/authController');
+const { protectedMiddleware } = require('../middleware/authMiddleware');
 const router = express.Router();
 
 // verifikasi email
-router.get("/verify-email", verifyEmailRegist);
+router.get('/verify-email', verifyEmailRegist);
 
 // user login
-router.post("/sessions", createSession);
+router.post('/sessions', createSession);
+
+// user logout
+router.delete('/sessions', protectedMiddleware, deleteSession);
 
 module.exports = router;
